@@ -245,6 +245,10 @@ see the files COPYING3 and COPYING.RUNTIME respectively.  If not, see
 
   #include "decContextSymbols.h"
 
+  #ifdef __cplusplus
+  extern "C" {
+  #endif
+
   extern decContext  * decContextClearStatus(decContext *, uint32_t);
   extern decContext  * decContextDefault(decContext *, int32_t);
   extern enum rounding decContextGetRounding(decContext *);
@@ -261,5 +265,9 @@ see the files COPYING3 and COPYING.RUNTIME respectively.  If not, see
   extern uint32_t      decContextTestSavedStatus(uint32_t, uint32_t);
   extern uint32_t      decContextTestStatus(decContext *, uint32_t);
   extern decContext  * decContextZeroStatus(decContext *);
+
+  #ifdef __cplusplus
+  }
+  #endif
 
 #endif
