@@ -79,6 +79,10 @@ see the files COPYING3 and COPYING.RUNTIME respectively.  If not, see
 
 #include "decimal128Symbols.h"
 
+  #ifdef __cplusplus
+  extern "C" {
+  #endif
+
   /* String conversions 					      */
   decimal128 * decimal128FromString(decimal128 *, const char *, decContext *);
   char * decimal128ToString(const decimal128 *, char *);
@@ -92,5 +96,9 @@ see the files COPYING3 and COPYING.RUNTIME respectively.  If not, see
   /* Format-dependent utilities 				      */
   uint32_t    decimal128IsCanonical(const decimal128 *);
   decimal128 * decimal128Canonical(decimal128 *, const decimal128 *);
+
+  #ifdef __cplusplus
+  }
+  #endif
 
 #endif
